--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ListaSolidaria"
+        android:theme="@style/Theme.ListãoDoRacha"
         tools:targetApi="31">
+        <activity
+            android:name=".InicioActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".PerfilActivity"
             android:exported="false">
@@ -36,9 +43,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".AlunosActivity"
-            android:exported="false" />
         <activity
             android:name=".NovoLoginActivity"
             android:exported="false" />
